<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#F2F3F4"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginEnd="136dp"
        android:fontFamily="@font/asap"
        android:text="@string/tv1"
        android:textAlignment="center"
        android:textColor="#B7090000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="132dp"
        android:layout_height="118dp"
        android:layout_marginBottom="276dp"
        android:backgroundTint="#3F51B5"
        android:fontFamily="@font/asap_medium"
        android:text="@string/btn1"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="132dp"
        android:layout_height="118dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="276dp"
        android:backgroundTint="#3F51B5"
        android:fontFamily="@font/asap_medium"
        android:text="@string/btn2"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn1" />

</androidx.constraintlayout.widget.ConstraintLayout>